--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-range-slider-input": "^3.0.7",
     "react-redux": "^8.1.2",
     "react-slider": "^2.0.6",
+    "react-toastify": "^11.0.5",
     "swiper": "^10.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
